--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,7 @@
-certifi==2020.6.20
-chardet==3.0.4
-click==7.1.2
-filelock==3.0.12
-Flask==1.1.2
-Flask-WTF==0.14.3
-future==0.18.2
-idna==2.10
-itsdangerous==1.1.0
-Jinja2==2.11.2
-joblib==0.16.0
-MarkupSafe==1.1.1
-numpy==1.19.1
-packaging==20.4
-pandas==1.1.1
-pyparsing==2.4.7
-python-dateutil==2.8.1
-python-dotenv==0.14.0
-pytz==2020.1
-regex==2020.7.14
-requests==2.24.0
-sacremoses==0.0.43
-sentencepiece==0.1.91
-six==1.15.0
-tokenizers==0.8.1rc1
-https://files.pythonhosted.org/packages/38/53/914885a93a44b96c0dd1c36f36ff10afe341f091230aad68f7228d61db1e/torch-1.6.0-cp36-cp36m-manylinux1_x86_64.whl
-tqdm==4.48.2
-transformers==3.0.2
-urllib3==1.25.10
-Werkzeug==1.0.1
+torch==1.6.0
+Flask_WTF==0.14.3
 WTForms==2.3.3
+Flask==1.1.2
+numpy==1.19.1
+pandas==1.1.1
+transformers==3.0.2
