--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,34 @@
-https://download.pytorch.org/whl/cpu/torch-1.0.1.post2-cp37-cp37m-linux_x86_64.whl
-Flask_WTF==0.14.3
-WTForms==2.3.3
+certifi==2020.6.20
+chardet==3.0.4
+click==7.1.2
+docopt==0.6.2
+filelock==3.0.12
 Flask==1.1.2
+Flask-WTF==0.14.3
+future==0.18.2
+idna==2.10
+itsdangerous==1.1.0
+Jinja2==2.11.2
+joblib==0.16.0
+MarkupSafe==1.1.1
 numpy==1.19.1
+packaging==20.4
 pandas==1.1.1
+pipreqs==0.4.10
+pyparsing==2.4.7
+python-dateutil==2.8.1
+python-dotenv==0.14.0
+pytz==2020.1
+regex==2020.7.14
+requests==2.24.0
+sacremoses==0.0.43
+sentencepiece==0.1.91
+six==1.15.0
+tokenizers==0.8.1rc1
+https://download.pytorch.org/whl/cpu/torch-1.6.0%2Bcpu-cp37-cp37m-linux_x86_64.whl
+tqdm==4.48.2
 transformers==3.0.2
+urllib3==1.25.10
+Werkzeug==1.0.1
+WTForms==2.3.3
+yarg==0.1.9
