--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ click==7.1.2
 docopt==0.6.2
 filelock==3.0.12
 Flask==1.1.2
+Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.3
 future==0.18.2
 gunicorn==20.0.4
@@ -25,6 +26,7 @@ requests==2.24.0
 sacremoses==0.0.43
 sentencepiece==0.1.91
 six==1.15.0
+SQLAlchemy==1.3.19
 tokenizers==0.8.1rc1
 https://download.pytorch.org/whl/cpu/torch-1.6.0%2Bcpu-cp37-cp37m-linux_x86_64.whl
 tqdm==4.48.2
