--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 certifi==2020.6.20
 chardet==3.0.4
 click==7.1.2
+dataclasses==0.8
 docopt==0.6.2
 filelock==3.0.12
 Flask==1.1.2
@@ -17,7 +18,7 @@ numpy==1.19.1
 packaging==20.4
 pandas==1.1.1
 pipreqs==0.4.10
-psycopg2==2.8.5
+psycopg2-binary==2.8.6
 pyparsing==2.4.7
 python-dateutil==2.8.1
 python-dotenv==0.14.0
@@ -29,9 +30,10 @@ sentencepiece==0.1.91
 six==1.15.0
 SQLAlchemy==1.3.19
 tokenizers==0.8.1rc1
-https://download.pytorch.org/whl/cpu/torch-1.6.0%2Bcpu-cp37-cp37m-linux_x86_64.whl
+torch==1.7.1
 tqdm==4.48.2
 transformers==3.0.2
+typing-extensions==3.7.4.3
 urllib3==1.25.10
 Werkzeug==1.0.1
 WTForms==2.3.3
