--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,13 @@ Flask==2.0.0
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==0.14.3
 greenlet==1.1.0
+importlib-metadata==4.0.1
 itsdangerous==2.0.1
 Jinja2==3.0.1
 joblib==1.0.1
 MarkupSafe==2.0.1
 numpy==1.20.3
-pandas==1.2.4
+pandas==1.1.5
 python-dateutil==2.8.1
 python-dotenv==0.17.1
 pytz==2021.1
@@ -19,5 +20,7 @@ six==1.16.0
 sklearn==0.0
 SQLAlchemy==1.4.15
 threadpoolctl==2.1.0
+typing-extensions==3.10.0.0
 Werkzeug==2.0.1
 WTForms==2.3.3
+zipp==3.4.1
