--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ Flask==2.0.0
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==0.14.3
 greenlet==1.1.0
+gunicorn==20.1.0
 importlib-metadata==4.0.1
 itsdangerous==2.0.1
 Jinja2==3.0.1
