--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ joblib==1.0.1
 MarkupSafe==2.0.1
 numpy==1.20.3
 pandas==1.1.5
+psycopg2==2.7.7
 python-dateutil==2.8.1
 python-dotenv==0.17.1
 pytz==2021.1
